--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
-}
-
-footer {
-  background-color: rgb(0, 195, 255);
-  color: white;
 }
 
 h1 {
@@ -17,6 +13,7 @@ h1 {
 
 h4 {
   font-weight: 400;
+  font-size: 18px;
 }
 
 section {
@@ -38,7 +35,20 @@ section > div {
   background-color: rgb(155, 14, 14);
 }
 
-svg {
+footer {
   width: 100%;
-  max-width: 56px;
+  min-height: 150px;
+  background-color: rgb(0, 195, 255);
+  color: white;
+}
+
+#icons {
+  display: flex;
+  flex-direction: row;
+}
+
+.gitlink, .contactinfo > svg {
+  width: 100%;
+  max-width: 100px;
+  max-height: 100px;
 }/*# sourceMappingURL=style.css.map */
