--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -7,15 +8,12 @@
     
 }
 
-footer {
-    background-color: rgb(0, 195, 255);
-    color: white;
-}
 h1 {
     font-weight: 300;
 }
 h4 {
     font-weight: 400;
+    font-size: 18px;
 }
 
 section {
@@ -34,8 +32,20 @@ section>div {
 .one {
     background-color: rgb(155, 14, 14);
 }
-svg {
-    width: 100%;
-    max-width: 56px;
+footer {
+  width: 100%;
+  min-height: 150px;
+  background-color: rgb(0, 195, 255);
+  color: white;
+}
 
+
+#icons{
+    display: flex;
+    flex-direction: row;
+}
+.gitlink,.contactinfo>svg {
+    width: 100%;
+    max-width: 100px;
+    max-height: 100px;
 }
