working on main, and page content in general

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+$primary: #0369a1;
+$secondary: #9c1f44;
 * {
     padding: 0;
     margin: 0;
@@ -7,45 +9,53 @@
     font-family: Roboto, sans-serif;
     
 }
-
+main {
+    min-height: calc(100vh - 70px)
+}
 h1 {
     font-weight: 300;
 }
 h4 {
     font-weight: 400;
     font-size: 18px;
+    padding: 5px 10px 10px;
 }
-
 section {
-    display: grid;
-    grid-template-columns: repeat(3, 250px);
-    grid-template-rows: repeat(6, 150px);
-    gap: 15px;
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    background: linear-gradient(45deg, rgba(134, 20, 206, .4), rgba(255, 0, 87, .9)
+    ), url('28.mp4');
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-section>div {
-    border: solid 1px black;
-    color: white;
-    font-size: 25px;
-    text-align: center;
-    padding: 45px;
+section::before
+{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 250px;
+    background: #fff;
+    clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+    margin-bottom: -1px;
 }
-.one {
-    background-color: rgb(155, 14, 14);
-}
+ 
 footer {
   width: 100%;
-  min-height: 150px;
-  background-color: rgb(0, 195, 255);
+   min-height: 150px;
+  background-color: $primary;
   color: white;
 }
-
-
-#icons{
-    display: flex;
-    flex-direction: row;
+footer>a {
+    text-decoration: none;
+    font-size: 35px;
 }
-.gitlink,.contactinfo>svg {
-    width: 100%;
-    max-width: 100px;
-    max-height: 100px;
-}
+a:visited {
+    color: inherit;
+  }
+  a:hover {
+    color: $secondary;
+  }
