--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,10 @@
   font-family: Roboto, sans-serif;
 }
 
+main {
+  min-height: calc(100vh - 70px);
+}
+
 h1 {
   font-weight: 300;
 }
@@ -14,41 +18,48 @@ h1 {
 h4 {
   font-weight: 400;
   font-size: 18px;
+  padding: 5px 10px 10px;
 }
 
 section {
-  display: grid;
-  grid-template-columns: repeat(3, 250px);
-  grid-template-rows: repeat(6, 150px);
-  gap: 15px;
+  position: relative;
+  width: 100%;
+  height: 90vh;
+  background: linear-gradient(45deg, rgba(134, 20, 206, 0.4), rgba(255, 0, 87, 0.9)), url("/img/banner-img.png");
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-section > div {
-  border: solid 1px black;
-  color: white;
-  font-size: 25px;
-  text-align: center;
-  padding: 45px;
-}
-
-.one {
-  background-color: rgb(155, 14, 14);
+section::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 250px;
+  background: #fff;
+  -webkit-clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+          clip-path: polygon(100% 50%, 0 100%, 100% 100%);
+  margin-bottom: -1px;
 }
 
 footer {
   width: 100%;
   min-height: 150px;
-  background-color: rgb(0, 195, 255);
+  background-color: #0369a1;
   color: white;
 }
 
-#icons {
-  display: flex;
-  flex-direction: row;
+footer > a {
+  text-decoration: none;
+  font-size: 35px;
 }
 
-.gitlink, .contactinfo > svg {
-  width: 100%;
-  max-width: 100px;
-  max-height: 100px;
+a:visited {
+  color: inherit;
+}
+
+a:hover {
+  color: #9c1f44;
 }/*# sourceMappingURL=style.css.map */
