--- a/src/style.css
+++ b/src/style.css
@@ -21,17 +21,37 @@ h4 {
   padding: 5px 10px 10px;
 }
 
-section {
+.container {
   position: relative;
   width: 100%;
   height: 90vh;
-  background: linear-gradient(45deg, rgba(134, 20, 206, 0.4), rgba(255, 0, 87, 0.9)), url("/img/banner-img.png");
+  background: linear-gradient(45deg, rgba(107, 12, 167, 0.4), rgba(59, 2, 21, 0.9)), url("gif.gif");
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-section::before {
+.content {
+  position: relative;
+  width: 900px;
+  text-align: center;
+  padding: 0 10px;
+}
+
+.content h2 {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+  font-size: 3.6em;
+}
+
+.content p {
+  color: #fff;
+  font-size: 1.1em;
+}
+
+.container::before {
   content: "";
   position: absolute;
   bottom: 0;
